Fix height on mobile browsers

--- a/attendance-payment/style.css
+++ b/attendance-payment/style.css
@@ -126,7 +126,8 @@ input[type="text"] {
     padding: 0;
     border-radius: 0;
     background-color: transparent;
-	height: 2em;
+    height: 2em;
+    line-height: 2em;
 	padding: 0em 2em;
 	box-sizing: border-box;
 }
